aggiunti gruppi, da aggiungere api e finire add, remove e delete + cose commentate
