# service/api/api-handler.go
@@ -20,10 +20,12 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/messages/:Message_id/forwards", rt.wrap(rt.forwardMessageHandler))
 	rt.router.POST("/messages/:Message_id/reactions", rt.wrap(rt.manageReactionHandler))
 	rt.router.DELETE("/messages/:Message_id", rt.wrap(rt.deleteMessageHandler))
+
+	// GROUPS
+	rt.router.POST("/groups", rt.wrap(rt.createGroupHandler))
+	rt.router.DELETE("/groups/:Group_id", rt.wrap(rt.deleteGroupHandler))
+	rt.router.POST("/groups/:Group_id/users/:User_id", rt.wrap(rt.manageGroupUsersHandler))
 	/*
-		// GROUPS
-		rt.router.POST("/groups/:Group_id/users", rt.wrap(rt.addUserToGroupHandler))
-		rt.router.DELETE("/groups/:Group_id/users/:User_id", rt.wrap(rt.removeUserFromGroupHandler))
 		rt.router.PATCH("/groups/:Group_id", rt.wrap(rt.updateGroupNameHandler))
 		rt.router.PUT("/groups/:Group_id/photo", rt.wrap(rt.updateGroupPhotoHandler))
 
